<resources>
    <string name="app_name">Body Soft</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BODY SOFT</string>
    <string name="nav_header_subtitle">Tu app para hacer ejercicio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="button_login">Ingresar</string>
    <string name="button_register">Registrarse</string>
    <string name="shr_hint_username">Usuario</string>
    <string name="shr_hint_password">Contraseña</string>

    <string name="home_second">Home Second</string>
    <string name="shr_error_password">Contraseña o usuario incorrecto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="channel_name">Notification</string>
    <string name="channel_description">Notification channel</string>

    <string name="routine_register_name_input_text">Nombre</string>
    <string name="routine__register_price_input_text">Precio</string>
    <string name="routine__register_description_input_text">Descripcion</string>
    <string name="routine__register_linkPreview_input_text">Link</string>
    <string name="resource_register_title_input_text">Titulo</string>
    <string name="resource_register_position_input_text">Posicion</string>

</resources>
