<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/listRoutineFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="lista rutinas" />
        <item
            android:id="@+id/fragment_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Perfil" />
        <item
            android:id="@+id/createUserFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Crear Usuario" />

            android:id="@+id/rootRoutineFragment"
            android:icon="@drawable/baseline_lock_24"
            android:title="lista rutinas" />

        <item
            android:id="@+id/userRoutineListFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />


        <item
            android:id ="@+id/changePasswordFragment"
            android:icon="@drawable/baseline_lock_24"
            android:title="Cambiar contraseña"/>


    </group>
</menu>
