<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".ui.Routine.RegisterResourceFragment"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.Routine.RegisterRoutineFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textColorPrimary"
            android:layout_marginBottom="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"

                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registra un Recurso"
            android:layout_marginBottom="15dp"
            android:textAppearance="@style/TextAppearance.Shrine.Title"

            android:gravity="center_horizontal"/>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/resource_register_title_input_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputNameRegisterResource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/resource_register_position_input_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputPositionRegisterResource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/routine__register_description_input_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputDescriptionRegisterResource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/routine__register_linkPreview_input_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputLinkPreviewRegisterResource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnRoutineResource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registrar"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"/>



    </LinearLayout>
</ScrollView>