<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/login">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"
        app:startDestination="@id/action_HomeFragment_to_HomeSecondFragment">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.myapplication.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/goToRoutine"
            app:destination="@id/routineFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/routineFragment"
        android:name="com.example.myapplication.ui.Routine.RoutineFragment"
        android:label="RoutineFragment" >
        <argument
            android:name="name"
            app:argType="string"
            android:defaultValue="nombrecit" />
    </fragment>
    <fragment

        android:id="@+id/listRoutineFragment"
        android:name="com.example.myapplication.ui.Routine.ListRoutineFragment"
        android:label="fragment_list_routine"
        tools:layout="@layout/fragment_list_routine" />
<fragment
        style = "AppTheme.NoActionBar"
        android:id="@+id/login"
        android:name="com.example.myapplication.ui.login.login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/go_to_main"
            app:destination="@id/nav_home" />
    </fragment>
<!--Daniela-->









































<!--Fin Daniela-->




<!--Andres-->



































































<!--Fin Andres-->

<!--Sergio-->












































<!--fin sergio-->
    <!--Valentina-->


    <fragment
        android:id="@+id/fragment_profile"
        android:name="com.example.myapplication.ui.Profile.UserProfileFragment"
        android:label="Perfil"
        tools:layout="@layout/fragment_user_profile" >
        <action
            android:id="@+id/go_to_edit_user"
            app:destination="@id/userEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/userEditFragment"
        android:name="com.example.myapplication.ui.Profile.UserEditFragment"
        android:label="Editar usuario"
        tools:layout="@layout/fragment_user_edit" >
        <action
            android:id="@+id/go_to_user_profile"
            app:destination="@id/fragment_profile" />
    </fragment>
    <fragment
        android:id="@+id/trainerFragment"
        android:name="com.example.myapplication.ui.Profile.TrainerFragment"
        android:label="Perfil"
        tools:layout="@layout/fragment_trainer" >
        <action
            android:id="@+id/go_to_edit_trainer"
            app:destination="@id/trainerEditFragment" />
        <action
            android:id="@+id/go_to_list_specialities"
            app:destination="@id/listSpecialitiesTrainerFragment" />
        <action
            android:id="@+id/go_to_list_degrees"
            app:destination="@id/listDegreesTrainerFragment" />
    </fragment>
    <fragment
        android:id="@+id/trainerEditFragment"
        android:name="com.example.myapplication.ui.Profile.TrainerEditFragment"
        android:label="fragment_trainer_edit"
        tools:layout="@layout/fragment_trainer_edit" >
        <action
            android:id="@+id/go_to_trainer_profile"
            app:destination="@id/trainerFragment" />
    </fragment>
    <fragment
        android:id="@+id/createUserFragment"
        android:name="com.example.myapplication.ui.Profile.CreateUserFragment"
        android:label="fragment_create_user"
        tools:layout="@layout/fragment_create_user" >
        <action
            android:id="@+id/from_create_user_to_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/createTrainerFragment"
        android:name="com.example.myapplication.ui.Profile.CreateTrainerFragment"
        android:label="fragment_create_trainer"
        tools:layout="@layout/fragment_create_trainer" >
        <action
            android:id="@+id/from_create_trainer_to_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/listSpecialitiesTrainerFragment"
        android:name="com.example.myapplication.ui.Profile.ListSpecialitiesTrainerFragment"
        android:label="fragment_list_specialities_trainer"
        tools:layout="@layout/fragment_list_specialities_trainer" >
        <action
            android:id="@+id/go_to_add_specialities"
            app:destination="@id/addSpecialitiesTrainer" />
    </fragment>
    <fragment
        android:id="@+id/listDegreesTrainerFragment"
        android:name="com.example.myapplication.ui.Profile.ListDegreesTrainerFragment"
        android:label="fragment_list_degrees_trainer"
        tools:layout="@layout/fragment_list_degrees_trainer" >
        <action
            android:id="@+id/go_to_add_degrees"
            app:destination="@id/addDegreesTrainerFragment" />
    </fragment>
    <fragment
        android:id="@+id/addDegreesTrainerFragment"
        android:name="com.example.myapplication.ui.Profile.AddDegreesTrainerFragment"
        android:label="fragment_add_degrees_trainer"
        tools:layout="@layout/fragment_add_degrees_trainer" >
        <action
            android:id="@+id/from_add_to_list_degrees"
            app:destination="@id/listDegreesTrainerFragment" />
    </fragment>
    <fragment
        android:id="@+id/addSpecialitiesTrainer"
        android:name="com.example.myapplication.ui.Profile.AddSpecialitiesTrainer"
        android:label="fragment_add_specialities_trainer"
        tools:layout="@layout/fragment_add_specialities_trainer" >
        <action
            android:id="@+id/from_add_to_list_specialities"
            app:destination="@id/listSpecialitiesTrainerFragment" />
    </fragment>


    <!--fin valentina-->
</navigation>